[package]
name = "rust-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
futures = "*"
pnet = "*"
rand = "*"
prost = "*"
tonic = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = "*"
regex = "1.9.1"
log = "0.4.19"
clap = "4.3.14"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.9"
